<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_padding_large">

        <TextView
            android:id="@+id/email_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/login_email_text"
            app:layout_constraintBaseline_toBaselineOf="@id/email_edit_text"
            app:layout_constraintEnd_toEndOf="@id/password_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/email_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/login_password_text"
            app:layout_constraintBaseline_toBaselineOf="@id/password_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_label" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:inputType="textPassword"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/password_label"
            app:layout_constraintTop_toBottomOf="@id/email_edit_text" />

        <Button
            android:id="@+id/new_login_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/new_login_text"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintEnd_toStartOf="@id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

        <Button
            android:id="@+id/login_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/login_text"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/new_login_button"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>