<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".shoedetail.ShoeDetailFragment">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!--    Adding Scroll view to make views visible in small Landscape-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/layout_padding_large">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/name_text"
                android:textAlignment="textStart"
                app:layout_constraintBaseline_toBaselineOf="@id/name_text"
                app:layout_constraintEnd_toStartOf="@id/name_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:text="@={shoe.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/name_label"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/company_label"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/company_text"
                android:textAlignment="textStart"
                app:layout_constraintBaseline_toBaselineOf="@id/company_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_label" />

            <EditText
                android:id="@+id/company_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/vertical_margin"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:text="@={shoe.company}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/name_label"
                app:layout_constraintTop_toBottomOf="@id/name_text" />

            <TextView
                android:id="@+id/size_label"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/size_text"
                android:textAlignment="textStart"
                app:layout_constraintBaseline_toBaselineOf="@id/size_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/company_label" />

            <EditText
                android:id="@+id/size_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/vertical_margin"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:inputType="numberDecimal"
                android:text="@={shoe.size}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/company_label"
                app:layout_constraintTop_toBottomOf="@id/company_text" />

            <TextView
                android:id="@+id/description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/description_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/size_text" />

            <EditText
                android:id="@+id/description_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:text="@={shoe.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_label" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/cancel_text"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintEnd_toStartOf="@id/save_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_text" />

            <Button
                android:id="@+id/save_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/save_text"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/description_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>